Fixing gradients and text spacing

--- a/css/app.css
+++ b/css/app.css
@@ -62,7 +62,7 @@
  #about {
    width: 100%;
    min-height: 700px;
-   background: linear-gradient(to left, #0a2a88, #fff);
+   background: linear-gradient(to left, #0a2a88, #153185);
    border-bottom: 1px solid #333;
    padding: 50px 50px;
  }
@@ -125,7 +125,7 @@
    max-width: 60%;
    margin: 50px auto;
    border-radius: 8px;
-   background: linear-gradient #939aba;
+   background: #939aba;
  }
 
  input,
